--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,6 +3,7 @@ use_frameworks!
 
 target 'RDPAlertView_Example', :exclusive => true do
   pod 'RDPAlertView', :path => '../'
+  pod 'Masonry', '~> 0.6.4'
 end
 
 target 'RDPAlertView_Tests', :exclusive => true do
